# chessboard

./: .env.example  .gitignore  BOM.md  JOURNAL.md  README.md  pyproject.toml
backend/: API.md  README.md  app.py  command-hints.txt  main.py  pyproject.toml
backend/hardware/: leds.py  matrix.py
backend/tests/: matrix_test.py  neopixel_test.py
cad/: Chessboard.f3d  README.md
cad/3d-prints/: chessboard-a.stl  chessboard-b.stl  chessboard-c.stl  chessboard-d.stl  chessboard-e.stl
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/play_human/: page.tsx
frontend/app/play_lichess/: page.tsx
frontend/app/play_stockfish/: page.tsx
pico-matrix-scan/: main.py
pico_matrix_scan/: README.md  keypad_lib.py  main.py  matrix_demo.py  pico_matrix_scan.kicad_prl  pico_matrix_scan.kicad_pro  pico_matrix_scan.kicad_sch  pixel_test.py  read_matrix.py
