[project]
name = "chessboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "berserk>=0.14.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
]
[tool.uv]
override-dependencies = [
    # If on Linux (Raspberry Pi), install the actual hardware package
    "rpi-ws281x==5.0.0; sys_platform == 'linux'",
    # If on macOS (or anything else), swap in the harmless mock package
    "rpi-ws281x @ git+https://github.com/HarmvZ/rpi_ws281x_mock.git; sys_platform != 'linux'"
]
